Re-focus on generating art for printing. Update README.md and make code more easily runnable.